{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 14,
  "lineage": "6b653981-acab-41e2-d547-2ab70073714b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg1",
            "location": "canadaeast",
            "name": "lab02-nsg1",
            "resource_group_name": "lab02-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg2",
            "location": "canadaeast",
            "name": "lab02-nsg2",
            "resource_group_name": "lab02-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1",
            "name": "lab02-subnet1",
            "resource_group_name": "lab02-rg",
            "virtual_network_name": "lab02-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2",
            "name": "lab02-subnet2",
            "resource_group_name": "lab02-rg",
            "virtual_network_name": "lab02-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg1",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg2",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6d7cadd9-0b27-40ab-b114-db428e24a82e",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet",
            "location": "canadaeast",
            "name": "lab02-vnet",
            "resource_group_name": "lab02-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet1",
                "name": "lab02-subnet1",
                "security_group": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/networkSecurityGroups/lab02-nsg1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/lab02-rg/providers/Microsoft.Network/virtualNetworks/lab02-vnet/subnets/lab02-subnet2",
                "name": "lab02-subnet2"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}